complete hero section

--- a/index.html
+++ b/index.html
@@ -1,17 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio_1</title>
     <link rel="stylesheet" href="css/tailwind.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
-<body>
 
+<body class="box-border">
+    <!-- hero section start  -->
+    <div class="main h-[700px]">
+        <!-- nav bar start  -->
+        <nav class=" mt-5 absolute w-full z-10 bg-[#5E5C5C] opacity-70">
+            <div
+                class="nav-bar text-white h-[70px] lg:px-[10%] px-[5%]  container mx-auto flex items-center justify-between ">
+                <div class="brand-logo ">
+                    <h1 class="text-lg font-bold cursor-pointer"><a href="#" class="">Rx -JON</a></h1>
+                </div>
+                <div class="link-section hidden md:block text-base font-medium ">
+                    <a href="#" class="rounded-md  px-3 py-2  text-white"
+                        aria-current="page">Home</a>
+                    <a href="#"
+                        class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">About</a>
+                    <a href="#"
+                        class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">Portfolio</a>
+                    <a href="#"
+                        class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">Blog</a>
+                    <a href="#"
+                        class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">Contact</a>
+                </div>
+                <div class="lang sm:block md:hidden">
+                    <span class="font-bold	cursor-pointer "><i
+                            class="fa-solid fa-bars border border-gray-400 p-2"></i></span>
+                </div>
+                <div class="lang hidden md:block">
+                    <span class="rounded-full bg-red-600 hover:bg-red-500 p-4 font-bold	cursor-pointer ">En</span>
+                </div>
+            </div>
+        </nav>
+        <!-- nav bar end  -->
+        <div class="tit text-white text-center relative z-20">
+            <h3 class="pt-64 text-2xl z-20">Welcome</h3>
+            <h2 class="text-5xl pt-2">I'm <span class="text-red-600">Stephen</span> Doe</h2>
+            <h3 class="prof relative text-base font-bold  mt-6  z-10  py-3 px-6 inline-block  text-red-600 
+                before:content-[' ']
+              before:bg-red-700 
+                before:absolute
+                before:top-0
+                before:left-0
+                before:right-0
+                before:bottom-0
+                before:opacity-40
+                before:rounded-full">UI/UX & Web Designer
+             </h3>
+        </div>
 
-<script src="script/main.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js" integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    </div>
+    <!-- main div overlay  -->
+    <div class="main_overlay absolute top-0  w-full h-[700px]">
+        <!-- here is empty  -->
+    </div>
+    <!-- main div overlay end -->
+    <!-- hero section start  -->
+
+    <script src="script/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
+        integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
+
 </html>
