--- a/index.html
+++ b/index.html
@@ -23,14 +23,11 @@
                     <h1 class="text-lg font-bold cursor-pointer"><a href="#" class="">Rx -JON</a></h1>
                 </div>
                 <div class="link-section hidden md:block text-base font-medium ">
-                    <a href="#" class="rounded-md  px-3 py-2  text-white"
-                        aria-current="page">Home</a>
-                    <a href="#"
-                        class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">About</a>
+                    <a href="#" class="rounded-md  px-3 py-2  text-white" aria-current="page">Home</a>
+                    <a href="#" class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">About</a>
                     <a href="#"
                         class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">Portfolio</a>
-                    <a href="#"
-                        class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">Blog</a>
+                    <a href="#" class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">Blog</a>
                     <a href="#"
                         class="rounded-md px-3 py-2  text-gray-300 hover:bg-gray-700 hover:text-white">Contact</a>
                 </div>
@@ -57,7 +54,7 @@
                 before:bottom-0
                 before:opacity-40
                 before:rounded-full">UI/UX & Web Designer
-             </h3>
+            </h3>
         </div>
 
     </div>
@@ -66,7 +63,32 @@
         <!-- here is empty  -->
     </div>
     <!-- main div overlay end -->
-    <!-- hero section start  -->
+    <!-- hero section end  -->
+
+
+
+    <!-- lg:px-[10%] px-[5%]  for aling container -->
+    <section
+        class="self-dtls mt-40 mb-40 lg:px-[10%] px-[5%]   container mx-auto flex  flex-wrap md:flex-nowrap justify-center border-[5px]">
+        <div class="picture ms-10 relative border-[5px] border-red-600 min-h-96 min-w-80 ">
+            <img src="img/person.jpg" class="absolute h-full w-full top-5 right-5" alt="">
+        </div>
+        <div class="self-descrip border ms-16 mt-20 lg:mt-0">
+            <h2 class="text-4xl">Stephen Doe</h2>
+            <h3 class="mt-2 text-xl text-red-600 ">UI/UX & Web Designer</h3>
+            <p class="mt-2">There are many variations of passages of Lorem Ipsum available, but the majority have
+                suffered alteration
+                in some form but the majority have suffered alteration in some</p>
+            <div class="about-process mt-3">
+                <span><b>From:</b> Texas, US</span><br>
+                <span><b>Lives In:</b> Texas, US</span><br>
+                <span><b>Age:</b> Texas, US</span><br>
+                <span><b>Gender:</b> Texas, US</span><br>
+            </div>
+            <button class="mt-3 border-2 border-red-600 py-2 px-5 rounded-md text-red-600 font-semibold">Dowonload
+                CV</button>
+        </div>
+    </section>
 
     <script src="script/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
