--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <!-- details section end  -->
     <!-- skill section start  -->
      <section class="mb-40">
+
         <h2 class="text-4xl text-center ">My Skills</h2>
         <div class="skills lg:px-[10%] px-[5%] container mx-auto flex flex-wrap">
             <div class="coding min-w-80 flex-1 me-3 mt-4">
@@ -141,6 +142,59 @@
         </div>
      </section>
     <!-- skill section end -->
+    <!-- qualification start  -->
+     <section class="mb-40">
+        <div class="lg:px-[10%] px-[5%] container mx-auto flex flex-wrap">
+            <div class="eduction min-w-80 flex-1 me-3 mt-4">
+                <h2 class="text-3xl my-3">Education</h2>
+                <div class="exp-dtl ">
+                    <button class="bg-red-600 text-white py-2 leading-5	 text-start ps-5 w-44 cstm-rds mb-2 ">2010</button>
+                    <div class="qul-card bg-gray-300 border p-5 mb-3">
+                        <h4 class="text-xl font-semibold mb-1">Specialize of course</h4>
+                        <h5 class="text-red-600 mb-2">University of Study</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                    </div>
+                    <button class="bg-gray-500 text-white py-2 leading-5	 text-start ps-5 w-44 cstm-rds mb-2 ">2009</button>
+                    <div class="qul-card bg-gray-300 border p-5 mb-3">
+                        <h4 class="text-xl font-semibold mb-1">Specialize of course</h4>
+                        <h5 class="text-red-600 mb-2">University of Study</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                    </div>
+                    <button class="bg-gray-500 text-white py-2 leading-5	 text-start ps-5 w-44 cstm-rds mb-2 ">2008</button>
+                    <div class="qul-card bg-gray-300 border p-5 mb-3">
+                        <h4 class="text-xl font-semibold mb-1">Specialize of course</h4>
+                        <h5 class="text-red-600 mb-2">University of Study</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                    </div>
+                </div>
+            </div>
+            <div class="experience min-w-80 flex-1 me-3 mt-4">
+                <h2 class="text-3xl my-3">Experience</h2>
+                <div class="exp-dtl">
+                    <button class="bg-red-600 text-white py-2 leading-5	 text-start ps-5 w-44 cstm-rds mb-2 ">2017 - Curent</button>
+                    <div class="qul-card bg-gray-300 border p-5 mb-3">
+                        <h4 class="text-xl font-semibold mb-1">Specialize of course</h4>
+                        <h5 class="text-red-600 mb-2">University of Study</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                    </div>
+                    <button class="bg-gray-500 text-white py-2 leading-5	 text-start ps-5 w-44 cstm-rds mb-2 ">2014</button>
+                    <div class="qul-card bg-gray-300 border p-5 mb-3">
+                        <h4 class="text-xl font-semibold mb-1">Specialize of course</h4>
+                        <h5 class="text-red-600 mb-2">University of Study</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                    </div>
+                    <button class="bg-gray-500 text-white py-2 leading-5	 text-start ps-5 w-44 cstm-rds mb-2 ">2011</button>
+                    <div class="qul-card bg-gray-300 border p-5 mb-3">
+                        <h4 class="text-xl font-semibold mb-1">Specialize of course</h4>
+                        <h5 class="text-red-600 mb-2">University of Study</h5>
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+     </section>
+    <!-- qualification end  -->
 
     <script src="script/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
