--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="box-border">
+<body class="box-border ">
     <!-- hero section start  -->
     <div class="main h-[700px]">
         <!-- nav bar start  -->
@@ -236,6 +236,28 @@
         </div>
     </section>
     <!-- Service section end  -->
+     <!-- count sectioin start  -->
+      <section class="cout-sct mb-40 py-16 border bg-gray-00">
+        <div class="lg:px-[10%] px-[5%] container mx-auto flex flex-wrap justify-center sm:justify-between">
+            <div class="text-center text-white py-12 w-full sm:w-1/2 md:w-1/2 lg:w-1/3  xl:w-1/4">
+                <span class="count block text-5xl mb-5">768</span>
+                <span class="cnt-name block text-xl">Clints</span>
+            </div>
+            <div class="text-center text-white py-12 w-full sm:w-1/2 md:w-1/2 lg:w-1/3  xl:w-1/4">
+                <span class="count block text-5xl mb-5">230</span>
+                <span class="cnt-name block text-xl">Project Complete</span>
+            </div>
+            <div class="text-center text-white py-12 w-full sm:w-1/2 md:w-1/2 lg:w-1/3  xl:w-1/4">
+                <span class="count block text-5xl mb-5">97</span>
+                <span class="cnt-name block text-xl">Project Ongoing</span>
+            </div>
+            <div class="text-center text-white py-12 w-full sm:w-1/2 md:w-1/2 lg:w-1/3  xl:w-1/4">
+                <span class="count block text-5xl mb-5">699</span>
+                <span class="cnt-name block text-xl">Client Satisfaction</span>
+            </div>
+        </div>
+      </section>
+     <!-- count sectioin end -->
 
     <script src="script/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
