--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- nav bar start  -->
         <nav class=" mt-5 absolute w-full z-10 bg-[#5E5C5C] opacity-70">
             <div
-                class="nav-bar text-white h-[70px] lg:px-[10%] px-[5%]  container mx-auto flex items-center justify-between ">
+                class="nav-bar text-white h-[70px] lg:px-[10%] px-[5%]  container mx-auto flex items-center justify-start  ">
                 <div class="brand-logo ">
                     <h1 class="text-lg font-bold cursor-pointer"><a href="#" class="">Rx -JON</a></h1>
                 </div>
@@ -253,11 +253,97 @@
             </div>
             <div class="text-center text-white py-12 w-full sm:w-1/2 md:w-1/2 lg:w-1/3  xl:w-1/4">
                 <span class="count block text-5xl mb-5">699</span>
-                <span class="cnt-name block text-xl">Client Satisfaction</span>
+                <span class="cnt-name block text-xl  mb-3">Client Satisfaction</span>
             </div>
         </div>
       </section>
      <!-- count sectioin end -->
+       <!-- Portfolio section  -->
+        <section class="mb-40">
+         <button  class="mx-auto py-3 leading-3 px-7 text-lg rounded-full bg-red-200 text-red-600 font-semibold block mb-3">Portfolio</button>
+         <h6 class="text-center text-4xl mb-10">See my work</h6>
+         <div class="ptf-cat text-center">
+            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-red-600 rounded-full bg-red-600 border-2 font-semibold border-white text-white py-1">All</a></button>
+            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Apps</a></button>
+            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Template</a></button>
+            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">IOS</a></button>
+            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">UI/UX</a></button><br>
+            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Graphic</a></button>
+            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Wireframes</a></button>
+
+         </div>
+            <div class="mt-16 lg:px-[10%] px-[5%] container mx-auto flex flex-wrap justify-center sm:justify-start ">
+                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                   <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                    <img src="img/office.jpg" alt="" class="w-full h-full">
+                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                    </div>
+                    </div>
+                   </div>
+                </div>
+                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                   <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                    <img src="img/office.jpg" alt="" class="w-full h-full">
+                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                    </div>
+                    </div>
+                   </div>
+                </div>
+                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                   <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                    <img src="img/office.jpg" alt="" class="w-full h-full">
+                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                    </div>
+                    </div>
+                   </div>
+                </div>
+                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                   <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                    <img src="img/office.jpg" alt="" class="w-full h-full">
+                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                    </div>
+                    </div>
+                   </div>
+                </div>
+                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                   <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                    <img src="img/office.jpg" alt="" class="w-full h-full">
+                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                    </div>
+                    </div>
+                   </div>
+                </div>
+                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                   <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                    <img src="img/office.jpg" alt="" class="w-full h-full">
+                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                    </div>
+                    </div>
+                   </div>
+                </div>
+
+                
+            </div>
+        </section>
+       <!-- Portfolio section end -->
 
     <script src="script/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
