--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio_1</title>
     <link rel="stylesheet" href="css/tailwind.css">
+    <!-- owlcoursel naccersy file  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- owlcoursel naccersy file end -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -18,7 +27,7 @@
         <!-- nav bar start  -->
         <nav class=" mt-5 absolute w-full z-10 bg-[#5E5C5C] opacity-70">
             <div
-                class="nav-bar text-white h-[70px] lg:px-[10%] px-[5%]  container mx-auto flex items-center justify-start  ">
+                class="nav-bar text-white h-[70px] lg:px-[10%] px-[5%]  container mx-auto flex items-center justify-between  ">
                 <div class="brand-logo ">
                     <h1 class="text-lg font-bold cursor-pointer"><a href="#" class="">Rx -JON</a></h1>
                 </div>
@@ -236,8 +245,8 @@
         </div>
     </section>
     <!-- Service section end  -->
-     <!-- count sectioin start  -->
-      <section class="cout-sct mb-40 py-16 border bg-gray-00">
+    <!-- count sectioin start  -->
+    <section class="cout-sct mb-40 py-16 border bg-gray-00">
         <div class="lg:px-[10%] px-[5%] container mx-auto flex flex-wrap justify-center sm:justify-between">
             <div class="text-center text-white py-12 w-full sm:w-1/2 md:w-1/2 lg:w-1/3  xl:w-1/4">
                 <span class="count block text-5xl mb-5">768</span>
@@ -256,99 +265,159 @@
                 <span class="cnt-name block text-xl  mb-3">Client Satisfaction</span>
             </div>
         </div>
-      </section>
-     <!-- count sectioin end -->
-       <!-- Portfolio section  -->
-        <section class="mb-40">
-         <button  class="mx-auto py-3 leading-3 px-7 text-lg rounded-full bg-red-200 text-red-600 font-semibold block mb-3">Portfolio</button>
-         <h6 class="text-center text-4xl mb-10">See my work</h6>
-         <div class="ptf-cat text-center">
-            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-red-600 rounded-full bg-red-600 border-2 font-semibold border-white text-white py-1">All</a></button>
-            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Apps</a></button>
-            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Template</a></button>
-            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">IOS</a></button>
-            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">UI/UX</a></button><br>
-            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Graphic</a></button>
-            <button class="mx-1 my-3"><a href="#" class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Wireframes</a></button>
+    </section>
+    <!-- count sectioin end -->
+    <!-- Portfolio section  -->
+    <section class="mb-40">
+        <button
+            class="mx-auto py-3 leading-3 px-7 text-lg rounded-full bg-red-200 text-red-600 font-semibold block mb-3">Portfolio</button>
+        <h6 class="text-center text-4xl mb-10">See my work</h6>
+        <div class="ptf-cat text-center">
+            <button class="mx-1 my-3"><a href="#"
+                    class="px-4 ring-2 ring-red-600 rounded-full bg-red-600 border-2 font-semibold border-white text-white py-1">All</a></button>
+            <button class="mx-1 my-3"><a href="#"
+                    class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Apps</a></button>
+            <button class="mx-1 my-3"><a href="#"
+                    class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Template</a></button>
+            <button class="mx-1 my-3"><a href="#"
+                    class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">IOS</a></button>
+            <button class="mx-1 my-3"><a href="#"
+                    class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">UI/UX</a></button><br>
+            <button class="mx-1 my-3"><a href="#"
+                    class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Graphic</a></button>
+            <button class="mx-1 my-3"><a href="#"
+                    class="px-4 ring-2 ring-gray-600 rounded-full  border-2 font-semibold border-white text-gray-500 py-1">Wireframes</a></button>
 
-         </div>
-            <div class="mt-16 lg:px-[10%] px-[5%] container mx-auto flex flex-wrap justify-center sm:justify-start ">
-                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
-                   <div class=" p-4 h-full">
+        </div>
+        <div class="mt-16 lg:px-[10%] px-[5%] container mx-auto flex flex-wrap justify-center sm:justify-start ">
+            <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                <div class=" p-4 h-full">
                     <div class="relative  h-full w-full">
-                    <img src="img/office.jpg" alt="" class="w-full h-full">
-                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
-                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
-                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                        <img src="img/office.jpg" alt="" class="w-full h-full">
+                        <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                            <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                            <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                        </div>
                     </div>
-                    </div>
-                   </div>
                 </div>
-                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
-                   <div class=" p-4 h-full">
-                    <div class="relative  h-full w-full">
-                    <img src="img/office.jpg" alt="" class="w-full h-full">
-                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
-                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
-                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
-                    </div>
-                    </div>
-                   </div>
-                </div>
-                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
-                   <div class=" p-4 h-full">
-                    <div class="relative  h-full w-full">
-                    <img src="img/office.jpg" alt="" class="w-full h-full">
-                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
-                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
-                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
-                    </div>
-                    </div>
-                   </div>
-                </div>
-                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
-                   <div class=" p-4 h-full">
-                    <div class="relative  h-full w-full">
-                    <img src="img/office.jpg" alt="" class="w-full h-full">
-                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
-                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
-                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
-                    </div>
-                    </div>
-                   </div>
-                </div>
-                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
-                   <div class=" p-4 h-full">
-                    <div class="relative  h-full w-full">
-                    <img src="img/office.jpg" alt="" class="w-full h-full">
-                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
-                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
-                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
-                    </div>
-                    </div>
-                   </div>
-                </div>
-                <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
-                   <div class=" p-4 h-full">
-                    <div class="relative  h-full w-full">
-                    <img src="img/office.jpg" alt="" class="w-full h-full">
-                    <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
-                    <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
-                    <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
-                    </div>
-                    </div>
-                   </div>
-                </div>
-
-                
             </div>
-        </section>
-       <!-- Portfolio section end -->
+            <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                        <img src="img/office.jpg" alt="" class="w-full h-full">
+                        <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                            <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                            <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                        <img src="img/office.jpg" alt="" class="w-full h-full">
+                        <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                            <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                            <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                        <img src="img/office.jpg" alt="" class="w-full h-full">
+                        <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                            <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                            <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                        <img src="img/office.jpg" alt="" class="w-full h-full">
+                        <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                            <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                            <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="ptf-card    h-64  min-w-80 sm:w-full md:w-1/2 lg:w-1/2  xl:w-1/3 ">
+                <div class=" p-4 h-full">
+                    <div class="relative  h-full w-full">
+                        <img src="img/office.jpg" alt="" class="w-full h-full">
+                        <div class="ptf-title absolute h-20 w-full bg-gray-800 bottom-0 ">
+                            <h3 class="text-red-600 ms-5 text-xl font-semibold mt-2 ">Mobile Tranvel App</h3>
+                            <h4 class="text-white ms-5 text-lg  ">- Travel, Discovery</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <h3 class="text-center my-12"><button
+                class=" border-2 border-white rounded-md text-base leading-3 bg-red-600 px-8 py-4 text-white">Load
+                More</button></h3>
+    </section>
+    <!-- Portfolio section end -->
+    <!-- review section  -->
+    <section class="mb-40">
+        <h6 class="text-center text-4xl mb-10">What Clients are Saying</h6>
+        <div class="parsons lg:px-[10%] px-[5%] container mx-auto flex justify-center">
+            <div class="owl-carouse owl-theme">
+                <div class="person flex gap-4 border">
+                    <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-96 min-w-72 rounded-md">
+                    <div class=" text-lg text-gray-600 max-w-96">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint neque minima architecto id
+                            pariatur. Explicabo facilis fugiat sequi iure eaque, neque laborum saepe quidem
+                            perspiciatis. Autem temporibus eligendi, enim possimus eum magnam eaque itaque ipsum
+                            voluptatem architecto consequatur reprehenderit praesentium!</p>
+                        <div class=" mt-3 items-cente border">
+                            <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-20 w-20 rounded-full">
+                            <!-- <div class="">
+                                <h4 class="name text-lg font-semibold leading-3">Selena Affini</h4>
+                                <span class="text-gray-500 text-sm leading-3">CEO BIG TREE</span>
+                            </div> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="person flex gap-4 border">
+                    <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-96 min-w-72 rounded-md">
+                    <div class=" text-lg text-gray-600 max-w-96">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint neque minima architecto id
+                            pariatur. Explicabo facilis fugiat sequi iure eaque, neque laborum saepe quidem
+                            perspiciatis. Autem temporibus eligendi, enim possimus eum magnam eaque itaque ipsum
+                            voluptatem architecto consequatur reprehenderit praesentium!</p>
+                        <div class="flex mt-3 gap-3 items-center">
+                            <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-16 w-16 rounded-full">
+                            <div class="">
+                                <h4 class="name text-lg font-semibold leading-3">Selena Affini</h4>
+                                <span class="text-gray-500 text-sm leading-3">CEO BIG TREE</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-    <script src="script/main.js"></script>
+        </div>
+    </section>
+    <!-- review section end -->
+
+    <!--  owl carousel js-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!--  owl carousel js end-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
         integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="script/main.js"></script>
+
 </body>
 
 </html>
