modify client review

--- a/index.html
+++ b/index.html
@@ -365,33 +365,21 @@
     <!-- review section  -->
     <section class="mb-40">
         <h6 class="text-center text-4xl mb-10">What Clients are Saying</h6>
-        <div class="parsons lg:px-[10%] px-[5%] container mx-auto flex justify-center">
-            <div class="owl-carouse owl-theme">
-                <div class="person flex gap-4 border">
-                    <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-96 min-w-72 rounded-md">
-                    <div class=" text-lg text-gray-600 max-w-96">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint neque minima architecto id
-                            pariatur. Explicabo facilis fugiat sequi iure eaque, neque laborum saepe quidem
-                            perspiciatis. Autem temporibus eligendi, enim possimus eum magnam eaque itaque ipsum
-                            voluptatem architecto consequatur reprehenderit praesentium!</p>
-                        <div class=" mt-3 items-cente border">
-                            <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-20 w-20 rounded-full">
-                            <!-- <div class="">
-                                <h4 class="name text-lg font-semibold leading-3">Selena Affini</h4>
-                                <span class="text-gray-500 text-sm leading-3">CEO BIG TREE</span>
-                            </div> -->
-                        </div>
+        <div class="parsons lg:px-[10%] px-[5%] container mx-auto flex justify-cente border border-red-400">
+            <div class="owl-carousel owl-theme border border-blue-600">
+                <div class="person flex gap-4 flex-wrap justify-center">
+                    <div class="min-w-[250px] max-w-[250px]">
+                        <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-96  rounded-md">
                     </div>
-                </div>
-                <div class="person flex gap-4 border">
-                    <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-96 min-w-72 rounded-md">
-                    <div class=" text-lg text-gray-600 max-w-96">
+                    <div class=" text-lg text-gray-600 w-[350px] border border-green-500">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint neque minima architecto id
                             pariatur. Explicabo facilis fugiat sequi iure eaque, neque laborum saepe quidem
                             perspiciatis. Autem temporibus eligendi, enim possimus eum magnam eaque itaque ipsum
                             voluptatem architecto consequatur reprehenderit praesentium!</p>
-                        <div class="flex mt-3 gap-3 items-center">
-                            <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-16 w-16 rounded-full">
+                        <div class="flex mt-3 items-cente border py-4  gap-2">
+                            <div class="border border-yellow-400 w-12">
+                            <img src="img/testimonials/testimonials_2.jpg" alt="" class="h-12 w-[200px] rounded-full">
+                            </div>
                             <div class="">
                                 <h4 class="name text-lg font-semibold leading-3">Selena Affini</h4>
                                 <span class="text-gray-500 text-sm leading-3">CEO BIG TREE</span>
