--- a/index.html
+++ b/index.html
@@ -392,6 +392,42 @@
         </div>
     </section>
     <!-- review section end -->
+    <!-- blog section  -->
+     <section class="mb-40">
+        <button class="mx-auto py-3 leading-3 px-7 text-lg rounded-full bg-red-200 text-red-600 font-semibold block mb-3">Blog</button>
+        <h6 class="text-center text-4xl mb-10">Latest Post</h6>
+        <div class="lg:px-[10%] px-[5%] container mx-auto border flex justify-center md:justify-between items-start flex-wrap gap-20 md:gap-2 ">
+            <div class="blog-card border w-80">
+                <img src="img/work/work-9.jpg" alt="" class="w-80 h-52">
+                <div class="blog-tit px-4">
+                    <h3 class="blog-cat-nm font-semibold text-red-600 text-lg mt-4">Technology</h3>
+                    <h2 class="blog-desc text-2xl text-gray-700 ">Invision design forward found</h2>
+                    <span class="date text-sm text-gray-500">May 22, 2018</span>
+                </div>
+            </div>
+            <div class="blog-card border w-80">
+                <img src="img/work/work-1.jpg" alt="" class="w-80 h-52">
+                <div class="blog-tit px-4">
+                    <h3 class="blog-cat-nm font-semibold text-red-600 text-lg mt-4">Technology</h3>
+                    <h2 class="blog-desc text-2xl text-gray-700 ">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                    <span class="date text-sm text-gray-500">May 22, 2018</span>
+                </div>
+            </div>
+            <div class="blog-card border w-80">
+                <img src="img/work/work-8.jpg" alt="" class="w-80 h-52">
+                <div class="blog-tit px-4">
+                    <h3 class="blog-cat-nm font-semibold text-red-600 text-lg mt-4">Technology</h3>
+                    <h2 class="blog-desc text-2xl text-gray-700 ">Invision design forward found</h2>
+                    <span class="date text-sm text-gray-500">May 22, 2018</span>
+                </div>
+            </div>
+        </div>
+       <button
+            class=" mx-auto block border-2 border-white rounded-md text-base leading-3 bg-red-600 px-8 py-4 text-white my-12">Load
+            More</button>
+     </section>
+    <!-- blog section end -->
+
 
     <!--  owl carousel js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
