--- a/index.html
+++ b/index.html
@@ -448,9 +448,43 @@
                     </form>
                 </div>
             </div>
-      </section>
-      
+      </section>   
      <!-- contact section end -->
+      <!-- footer section  -->
+       <footer class="bg-gray-900 text-white">
+        <h6 class="text-center text-gray-400 font-semibold text-4xl py-10">Virctual Folio</h6>
+
+        <section class="lg:px-[10%] px-[5%] flex flex-wrap container mx-auto gap-y-20">
+            <div class=" w-full lg:w-2/4 ">
+                <h5 class="text-xl font-thin text-gray-500">Where to find me</h5>
+                <span class="font-semibold text-3xl text-gray-500">--------------</span>
+                <h6 class="text-2xl">1600 Amphitheatre Parkway</h6>
+                <h6 class="text-2xl">Mountain View, California 94043 US</h6>
+            </div>
+            <div class=" w-full sm:w-1/2  lg:w-1/4 ">
+                <h5 class="text-xl font-thin text-gray-500">Follow me</h5>
+                <span class="font-semibold text-3xl text-gray-500">--------------</span>
+                <a href="#" class="text-2xl my-1 block">Instaram</a>
+                <a href="#" class="text-2xl my-1 block">Facebook</a>
+                <a href="#" class="text-2xl my-1 block">Twitter</a>
+                <a href="#" class="text-2xl my-1 block">Youtube</a>
+            </div>
+            <div class=" w-full sm:w-1/2  lg:w-1/4 ">
+                <h5 class="text-xl font-thin text-gray-500">Follow me</h5>
+                <span class="font-semibold text-3xl text-gray-500">--------------</span>
+                <h6 class="text-2xl my-1">info@virtual.com</h6>
+                <h6 class="text-2xl my-1">+8890234</h6>
+                <h6 class="text-2xl my-1">+813023</h6>
+            </div>
+        </section>
+        <h6 class="text-center text-gray-400  text-3xl py-10">Subscribe</h6>
+        <div class="lg:px-[10%] px-[5%] w-full  flex  flex-wrap justify-center container mx-auto">
+            <input type="email" class="p-3 w-3/5 sm:w-2/3 xl:w-1/2   bg-gray-800  text-xl rounded-s-lg " id="" placeholder="Email address">
+            <button class="py-3 px-6 font-semibold text-xl bg-red-600 rounded-r-lg">Subscribe</button>
+        </div>
+        <h3 class="text-xl font-thin text-gray-400 text-center py-12">Copyright ©2020. All right reserved | This template is made with <i class="fa-regular fa-heart text-red-600"></i> by <span><a href="" class="text-blue-700 font-bold hover:underline">Nirob ID</a></span></h3>
+       </footer>
+      <!-- footer section end -->
 
     <!--  owl carousel js-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
