fixed image size issue

--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
                 <div class="brand-logo flex justify-between">
                     <h1 class="text-lg font-bold cursor-pointer"><a href="#" class="">Rx -JON</a></h1>
                     <div class="hidden md:hidden menu-btn1 ">
-                        <!-- <i class="fa-solid fa-x"></i> -->
                         <span class="font-bold	cursor-pointer "><i class="fa-solid fa-x border border-gray-400 px-3 py-2 "></i></span>
                     </div>
-                    
                 </div>
                 <div class="link-section hidden md:block text-base font-medium ">
                     <a href="#" class="rounded-md pr-6 md:px-3 py-2 block md:inline-block text-white" aria-current="page">Home</a>
@@ -77,11 +75,13 @@
     <!-- hero section end  -->
     <!-- details section start  -->
     <section
-        class="self-dtls mt-40 mb-40 lg:px-[10%] px-[5%]   container mx-auto flex  flex-wrap md:flex-nowrap justify-center border-[5px]">
-        <div class="picture ms-10 relative border-[5px] border-red-600 min-h-96 min-w-80 ">
-            <img src="img/person.jpg" class="absolute h-full w-full top-5 right-5" alt="">
-        </div>
-        <div class="self-descrip border ms-16 mt-20 lg:mt-0">
+        class="self-dtls my-40 container mx-auto flex flex-wrap lg:flex-nowrap gap-14  justify-center">
+            <div class="">
+                <div class="picture ms-10 relative border-[5px] border-red-600 h-96 w-80 ">
+                    <img src="img/person.jpg" class="absolute h-full w-full top-5 right-5" alt="">
+                </div>
+            </div>
+        <div class="self-descrip">
             <h2 class="text-4xl">Stephen Doe</h2>
             <h3 class="mt-2 text-xl text-red-600 ">UI/UX & Web Designer</h3>
             <p class="mt-2">There are many variations of passages of Lorem Ipsum available, but the majority have
